Feature: asset listing
